# xoreos-tools

./: .appveyor.yml  .gitignore  .travis.yml  .travis_coverity.sh  AUTHORS  BUILDDEP  BUILDDEP.md  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.common  NEWS.md  README.md  autogen.sh  configure.ac  rules.mk
.github/workflows/: linux_autoconf_clang.yml  linux_autoconf_gcc.yml  linux_autotools_clang.yml  linux_autotools_gcc.yml  linux_cmake_clang.yml  linux_cmake_gcc.yml  macos_autoconf_clang.yml  macos_autotools_clang.yml  macos_cmake_clang.yml  vcpkg.json  windows_cmake_msvc.yml
cmake/: CMakeAM.cmake  CMakeUninstall.cmake  FindIconv.cmake  FindLibLZMA.cmake  SetCheckCompilerFlag.cmake
cmake/toolchain/: i686-windows-mingw.cmake  x86_64-windows-mingw.cmake
dists/: rules.mk
dists/arch/: PKGBUILD
dists/debian/: changelog  control  copyright  rules
dists/fedora/: build-from-git.sh  xoreos-tools.spec
doc/: rules.mk
m4/: README  boost.m4
man/: cbgt2tga.1  cdpth2tga.1  convert2da.1  desmall.1  erf.1  fev2xml.1  fixnwn2xml.1  fixpremiumgff.1  gff2xml.1  keybif.1  nbfs2tga.1  ncgr2tga.1  ncsdecomp.1  ncsdis.1  rim.1  rules.mk  ssf2xml.1  tlk2xml.1  tws.1  unerf.1  unherf.1  unkeybif.1  unnds.1  unnsbtx.1  unobb.1  unrim.1  untws.1  xml2gff.1  xml2ssf.1  xml2tlk.1  xoreostex2tga.1
src/: Makefile.am  cbgt2tga.cpp  cdpth2tga.cpp  convert2da.cpp  desmall.cpp  erf.cpp  fev2xml.cpp  files_dragonage.h  files_sonic.cpp  files_sonic.h  fix2xml.cpp  fixnwn2xml.cpp  fixpremiumgff.cpp  gff2xml.cpp  keybif.cpp  nbfs2tga.cpp  ncgr2tga.cpp  ncsdecomp.cpp  ncsdis.cpp  rim.cpp  rules.mk  ssf2xml.cpp  texture2tga.cpp  tlk2xml.cpp  tws.cpp  unerf.cpp  unherf.cpp  unkeybif.cpp  unnds.cpp  unnsbtx.cpp  unobb.cpp  unrim.cpp  untws.cpp  util.cpp  util.h  xml2gff.cpp  xml2ssf.cpp  xml2tlk.cpp  xoreostex2tga.cpp
src/archives/: files_dragonage.h  files_sonic.cpp  files_sonic.h  rules.mk  util.cpp  util.h
src/aurora/: 2dafile.cpp  2dafile.h  Makefile.am  XMLFix.cpp  XMLFix.h  archive.cpp  archive.h  aurorafile.cpp  aurorafile.h  biffile.cpp  biffile.h  bifwriter.cpp  bifwriter.h  bzffile.cpp  bzffile.h  bzfwriter.cpp  bzfwriter.h  erffile.cpp  erffile.h  erfwriter.cpp  erfwriter.h  error.cpp  error.h  gdafile.cpp  gdafile.h  gdaheaders.cpp  gdaheaders.h  gff3file.cpp  gff3file.h  gff3writer.cpp  gff3writer.h  gff4fields.h  gff4file.cpp  gff4file.h  gfffile.cpp  gfffile.h  herffile.cpp  herffile.h  keydatafile.h  keydatawriter.h  (+47 more)
src/common/: Makefile.am  base64.cpp  base64.h  binsearch.h  blowfish.cpp  cli.cpp  cli.h  deallocator.h  deflate.cpp  deflate.h  disposableptr.h  encoding.cpp  encoding.h  encoding_strings.h  endianness.h  error.cpp  error.h  fallthrough.h  file.cpp  file.h  filepath.cpp  filepath.h  hash.h  lzma.cpp  lzma.h  maths.cpp  maths.h  md5.cpp  memreadstream.cpp  memreadstream.h  memwritestream.cpp  memwritestream.h  noncopyable.h  noreturn.h  platform.cpp  platform.h  ptrlist.h  ptrmap.h  ptrvector.h  readfile.cpp  (+32 more)
src/images/: Makefile.am  cbgt.cpp  cbgt.h  cdpth.cpp  cdpth.h  dds.cpp  dds.h  decoder.cpp  decoder.h  dumptga.cpp  dumptga.h  nbfs.cpp  nbfs.h  ncgr.cpp  ncgr.h  nclr.cpp  nclr.h  rules.mk  s3tc.cpp  s3tc.h  sbm.cpp  sbm.h  tga.cpp  tga.h  tpc.cpp  tpc.h  txb.cpp  txb.h  txi.cpp  txi.h  txitypes.cpp  txitypes.h  types.h  util.h  winiconimage.cpp  winiconimage.h  xoreositex.cpp  xoreositex.h
src/nwscript/: Makefile.am  analyze.cpp  analyze.h  block.cpp  block.h  controlflow.cpp  controlflow.h  decompiler.cpp  decompiler.h  disassembler.cpp  disassembler.h  game.cpp  game.h  game_dragonage.h  game_dragonage2.h  game_jade.h  game_kotor.h  game_kotor2.h  game_nwn.h  game_nwn2.h  game_witcher.h  instruction.cpp  instruction.h  ncsfile.cpp  ncsfile.h  parse.cpp  parse.h  rules.mk  stack.cpp  stack.h  subroutine.cpp  subroutine.h  types.h  util.cpp  util.h  variable.cpp  variable.h
src/sound/: fmodeventfile.cpp  fmodeventfile.h  rules.mk
src/version/: rules.mk  version.cpp  version.h
src/xml/: Makefile.am  fevdumper.cpp  fevdumper.h  gff3creator.cpp  gff3creator.h  gff3dumper.cpp  gff3dumper.h  gff4dumper.cpp  gff4dumper.h  gff4fields.h  gffcreator.cpp  gffcreator.h  gffdumper.cpp  gffdumper.h  rules.mk  ssfcreator.cpp  ssfcreator.h  ssfdumper.cpp  ssfdumper.h  tlkcreator.cpp  tlkcreator.h  tlkdumper.cpp  tlkdumper.h  xmlparser.cpp  xmlparser.h  xmlwriter.cpp  xmlwriter.h
src/xml-fixer/: TODO.txt  XMLFix  XMLFix.cpp  XMLFix.h  accountwelcomex1.xml  accountwelcomex1Fixed.xml  campaign.xml  campaignFixed.xml  chargen_backgroundx1.xml  chargen_backgroundx1Fixed.xml  fail.txt  output.csv  pass.txt  test.sh
tests/: rules.mk  skip.h
tests/aurora/: 2dafile.cpp  biffile.cpp  bifwriter.cpp  bzffile.cpp  bzfwriter.cpp  erffile.cpp  erfwriter.cpp  gdafile.cpp  gff3file.cpp  gff3writer.cpp  gff4file.cpp  herffile.cpp  keyfile.cpp  keywriter.cpp  language.cpp  locstring.cpp  ndsrom.cpp  rimfile.cpp  rimwriter.cpp  rules.mk  smallfile.cpp  ssffile.cpp  thewitchersavefile.cpp  thewitchersavewriter.cpp  util.cpp  xmlfix.cpp  xmlfixer.cpp  zipfile.cpp
tests/common/: binsearch.cpp  blowfish.cpp  deflate.cpp  disposableptr.cpp  encoding.h  encoding_ascii.cpp  encoding_cp1250.cpp  encoding_cp1251.cpp  encoding_cp1252.cpp  encoding_cp932.cpp  encoding_cp936.cpp  encoding_cp949.cpp  encoding_cp950.cpp  encoding_latin9.cpp  encoding_tests.h  encoding_utf16be.cpp  encoding_utf16le.cpp  encoding_utf8.cpp  filepath.cpp  hash.cpp  lzma.cpp  maths.cpp  md5.cpp  memreadstream.cpp  memwritestream.cpp  ptrlist.cpp  ptrmap.cpp  ptrvector.cpp  readfile.cpp  rules.mk  scopedptr.cpp  streamtokenizer.cpp  strutil.cpp  ustring.cpp  util.cpp  writefile.cpp  zipfile.cpp
tests/googletest/: rules.mk
tests/images/: rules.mk  util.cpp  xoreositex.cpp
tests/version/: rules.mk  version.cpp
tests/xml/: rules.mk  xmlparser.cpp
utf8cpp/: Makefile.am  rules.mk  utf8cpp.patch
utf8cpp/utf8/: checked.h
